--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-modal",
   "version": "3.1.10",
   "description": "Accessible modal dialog component for React.JS",
-  "main": "./lib/index.js",
+  "main": "./src/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/reactjs/react-modal.git"
